fix for product variation alignment

--- a/wp-content/themes/theiceplant/assets/css/app.css
+++ b/wp-content/themes/theiceplant/assets/css/app.css
@@ -405,6 +405,35 @@ button.button.disabled:hover {
             top: 0;
             transform: none;
             margin-top: 15px; } }
+      .single-product .product > div div.summary .variations_form {
+        font-size: 10px; }
+        .single-product .product > div div.summary .variations_form table {
+          width: 100% !important;
+          margin-bottom: 0;
+          margin-bottom: 3px; }
+          .single-product .product > div div.summary .variations_form table td {
+            display: block;
+            padding: 0; }
+            .single-product .product > div div.summary .variations_form table td select {
+              min-width: 0px;
+              max-width: 150px;
+              margin-bottom: 0 !important;
+              width: 100%; }
+          .single-product .product > div div.summary .variations_form table .label {
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 10px;
+            resize: none; }
+            .single-product .product > div div.summary .variations_form table .label label {
+              font-weight: normal; }
+          .single-product .product > div div.summary .variations_form table .reset_variations {
+            display: none !important; }
+        .single-product .product > div div.summary .variations_form .single_variation_wrap .quantity {
+          float: none;
+          margin-bottom: 3px; }
+        .single-product .product > div div.summary .variations_form .single_variation_wrap .woocommerce-variation-add-to-cart {
+          margin-top: 0; }
+        .single-product .product > div div.summary .variations_form .single_variation_wrap .single_add_to_cart_button {
+          margin-top: 0 !important; }
     .single-product .product > div .padding-right {
       padding-right: 160px !important; }
     .single-product .product > div .books-nav {
