--- a/wp-content/themes/theiceplant/assets/scss/components/_woocommerce.scss
+++ b/wp-content/themes/theiceplant/assets/scss/components/_woocommerce.scss
@@ -270,6 +270,47 @@
                         margin-top: 15px;
                     }
                 }
+                .variations_form {
+                    font-size: 10px;
+                    table {
+                        width: 100%!important;
+                        margin-bottom: 0;
+                        margin-bottom: 3px;
+                        td {
+                            display: block;
+                            padding: 0;
+                            select {
+                                min-width: 0px;
+                                max-width: 150px;
+                                margin-bottom: 0!important;
+                                width: 100%;                                
+                            }
+                        }
+                        .label {
+                            font-family: Arial, Helvetica, sans-serif;
+                            font-size: 10px;
+                            resize: none;
+                            label {
+                                font-weight: normal;
+                            }
+                        }
+                        .reset_variations {
+                            display: none!important;
+                        }
+                    }
+                    .single_variation_wrap {
+                        .quantity {
+                            float: none;
+                            margin-bottom: 3px;
+                        }
+                        .woocommerce-variation-add-to-cart {
+                            margin-top: 0;
+                        }
+                        .single_add_to_cart_button {
+                            margin-top: 0!important;
+                        }
+                    }
+                }
             }
             .padding-right {
                 padding-right: 160px!important;
